--- a/first-react/src/company/calculator/index.scss
+++ b/first-react/src/company/calculator/index.scss
@@ -1,17 +1,37 @@
-.calculator {
-  .calc {
-    width: 200px;
-    height: 20px;
-    border: 1px solid black;
-    margin-left: 10px;
-  }
-  .coutns {
-    display: flex;
-    margin-top: 20px;
-    button {
-      width: 20px;
-      border: 1px solid black;
-      margin-left: 10px;
+.container {
+  max-width: 1000px;
+  height: 100vh;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .calculator {
+    background: rgb(255, 255, 255);
+    border: 1px solid rgb(58, 57, 57);
+    .results {
+      margin: 10px;
+      outline: 0;
+      border: 0;
+      font-size: 20px;
+      font-weight: 600;
+      text-align: end;
+      width: 300px;
+      padding-top: 200px;
+    }
+    .calc {
+      width: 320px;
+      margin-left: 2px;
+      button {
+        font-size: 18px;
+        outline: 0;
+        border: 1px solid rgb(207, 207, 207);
+        width: 80px;
+        height: 80px;
+        cursor: pointer;
+        &:hover{
+          background-color: rgb(191, 194, 197);
+        }
+      }
     }
   }
 }
