--- a/first-react/css/App.css
+++ b/first-react/css/App.css
@@ -1,5 +1,5 @@
-.App {
-  text-align: center;
+body {
+  background: rgb(0, 0, 0);
 }
 
 .App-logo {
@@ -12,7 +12,6 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -35,4 +34,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+}/*# sourceMappingURL=App.css.map */
