class task data table

--- a/first-react/src/assets/images/css/index.css
+++ b/first-react/src/assets/images/css/index.css
@@ -34,4 +34,5 @@
 }
 .container .calculator .calc button:hover {
   background-color: rgb(191, 194, 197);
-}/*# sourceMappingURL=index.css.map */
+}
+/*# sourceMappingURL=index.css.map */
