--- a/first-react/src/App.scss
+++ b/first-react/src/App.scss
@@ -1,9 +1,9 @@
-// .App {
-//   text-align: center;
-// }
-body{
-  background: rgb(0, 0, 0);
+.App {
+  text-align: center;
 }
+// body{
+//   background: rgb(0, 0, 0);
+// }
 .App-logo {
   height: 40vmin;
   pointer-events: none;
