--- a/first-react/src/components/data/index.scss
+++ b/first-react/src/components/data/index.scss
@@ -6,36 +6,65 @@ table {
     border: 1px solid black;
     padding: 10px;
   }
-  tbody{
-    tr{
-        td{
-            .deleteBtn{
-                background-color: rgb(182, 2, 2);
-                border: 0;
-                border-radius: 5px;
-                padding: 5px;
-                color: white;
-                cursor: pointer;
-            }
-            .editBtn{
-                background-color: rgb(207, 152, 0);
-                border: 0;
-                border-radius: 5px;
-                padding: 5px;
-                color: white;
-                cursor: pointer;
-            }
+  tbody {
+    tr {
+      td {
+        .deleteBtn {
+          background-color: rgb(143, 0, 0);
+          border: 0;
+          border-radius: 5px 10px;
+          padding: 5px;
+          font-size: 12px;
+          color: white;
+          cursor: pointer;
         }
+        .editBtn {
+          background-color: rgb(170, 125, 0);
+          border: 0;
+          border-radius: 5px 10px;
+          padding: 5px 10px;
+          color: white;
+          cursor: pointer;
+          font-size: 12px;
+        }
+        .addBtn {
+          background-color: rgb(2, 14, 179);
+          border: 0;
+          border-radius: 5px 10px;
+          padding: 5px 10px;
+          font-size: 12px;
+          color: white;
+          cursor: pointer;
+        }
+      }
     }
   }
 }
-form{
-  div{
-    input{
-        margin-top: 10px;
+form {
+  div {
+    h1{
+      font-size: 27px;
+      color: blue;
+      margin-bottom: 0;
     }
-    button{
-        margin-top: 20px;
+    input {
+      margin-top: 10px;
+      margin-left: 10px;
+      outline: 0;
+      padding: 5px;
+    }
+    #email{
+      margin-left: 15px;
+    }
+    .submitBtn {
+      margin-top: 20px;
+      background-color: rgb(88, 99, 247);
+      border: 0;
+      border-radius: 5px;
+      padding: 5px 10px;
+      font-size: 12px;
+      color: white;
+      cursor: pointer;
     }
   }
 }
